# magpie

./: Cargo.toml
.cargo/: config.toml
config/: broker.toml
src/: broker.rs  main.rs  stats.rs
src/display/: mod.rs
